# bazel-starter-golang

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-bazel-starter-golang  go.mod  go.sum
cmd/: BUILD.bazel  main.go
pkg/string/: BUILD.bazel  string.go  string_test.go
