# このリポジトリの名前とバージョンを宣言する
module(
    name = "bazel-workspace",
    version = "0.0.1",
)

# rules_goを導入するためMODULE.bazelに追記
# https://github.com/bazel-contrib/rules_go
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "rules_go")

# Dockerイメージのbuildに必要なので追加
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# Go SDKをsetupする
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

# GazelleはGoの依存関係を解析して、Bazelのビルドファイルを生成するツール
bazel_dep(name = "gazelle", version = "0.39.1", repo_name = "gazelle")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_uuid")

# lintのためのnogoを追加
go_sdk.nogo(
    includes = [
        "//:__subpackages__",
    ],
    nogo = "//:my_nogo",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static_debian12",
    image = "gcr.io/distroless/static-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "nonroot",
)
use_repo(oci, "distroless_static_debian12", "distroless_static_debian12_linux_amd64", "distroless_static_debian12_linux_arm64_v8")
